# Computer-Graphics

OpenGL1/: myWindow.h
OpenGL1/cwc/source/: glWindow.cpp
OpenGL3/: Artificial.cpp  Artificial.h  CMakeLists.txt  ModelTextureRenderer.cpp  ModelTextureRenderer.h  Natural.cpp  Natural.h  World.cpp  World.h  main.cpp  myApplication.cpp  myWindow.cpp  myWindow.h
OpenGL3/Meshes/castle/: castle.mtl
OpenGL3/Meshes/horrorTree/: HorrorTree.mtl
OpenGL3/cwc/include/: glsl.h
OpenGL3/cwc/source/: glsl.cpp
OpenGL3/freeglut/source/: freeglut_joystick.c
OpenGL3/glm/: glm.cpp
WebGL/: index.html  scene.js
WebGL/Meshes/castleTower/: castleTower.glb  castleTower.mtl
WebGL/Meshes/dragon/: dragon.glb
WebGL/Meshes/horrorTree/: HorrorTree.glb
WebGL/Meshes/mountain/: mountain.mtl
